TODO

Deployment:
* update manuals
* create debian package files
* update macosx package files
* update msvcpp files
* update codegeare files

20090905
* initial version based on libnk2
