@@ -61,8 +61,6 @@
 /* Reserved: not supported yet */
 #define LIBLNK_OPEN_READ_WRITE		( LIBLNK_FLAG_READ | LIBLNK_FLAG_WRITE )
 
-#endif
-
 /* The data flags
  */
 enum LIBLNK_DATA_FLAGS
@@ -75,6 +73,8 @@ enum LIBLNK_DATA_FLAGS
 	LIBLNK_DATA_FLAG_CONTAINS_COMMAND_LINE_ARGUMENTS_DATA_STRING	= 0x00000020,
 	LIBLNK_DATA_FLAG_CONTAINS_CUSTOM_ICON_FILENAME_DATA_STRING	= 0x00000040
 };
+
+#endif
 
 /* The location flags
  */
