@@ -1201,43 +1201,3 @@ int liblnk_file_set_ascii_codepage(
 	return( 1 );
 }
 
-/* Retrieves the data flags
- * Returns 1 if successful or -1 on error
- */
-int liblnk_file_get_data_flags(
-     liblnk_file_t *file,
-     uint32_t *data_flags,
-     liberror_error_t **error )
-{
-	liblnk_internal_file_t *internal_file = NULL;
-	static char *function                 = "liblnk_file_get_data_flags";
-
-	if( file == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid file.",
-		 function );
-
-		return( -1 );
-	}
-	internal_file = (liblnk_internal_file_t *) file;
-
-	if( data_flags == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid data flags.",
-		 function );
-
-		return( -1 );
-	}
-	*data_flags = internal_file->data_flags;
-
-	return( 1 );
-}
-
